# courses

./: .clang-format  .gitignore  parse_hwproj_tasks.py
c_programming/: 08_adt.md  12_internal_data_representation.md  c_tasks.md  catppuccinpalette.sty  preamble.tex
c_programming/01_intro/: 01_basic_c.c  01_basic_c_trace.txt  01_intro_slides.tex  01_pointers_basic.c  01_pointers_question.c  beamercolorthemecatppuccin.sty  catppuccinpalette.sty
c_programming/02_codestyle/: 02_codestyle_slides.tex
c_programming/03_compilation/: .gitignore  03_compilation_slides.tex  beamercolorthemecatppuccin.sty  comp_pipeline.mmd  gcc_-v_hello.c_trace.txt
c_programming/04_libraries_and_optimization/: .gitignore  04_libraries_and_optimization_slides.tex  catppuccinpalette.sty  sizes.txt
c_programming/05_stack_queue/: 05_stack_queue_slides.tex  fib1.c  fib2.c  structPointer.c  structRef.c  structSelf.c  structStr.c
c_programming/06_lists/: 06_lists_slides.tex
c_programming/06a_pointers_test/: pointers_test.tex
c_programming/08_adt/: 08_adt_slides.tex  ListElement.c
c_programming/08_build_system/: 08_build_system.tex
c_programming/09_build_system/: 09_build_system.tex
c_programming/09_build_system/cmake_example/: CMakeLists.txt  Input.h  Logic.h
c_programming/10_testing_and_debugging/: 10_testing_and_debugging_slides.tex
c_programming/11_linters_sanitizers/: 11_linters_sanitizers_slides.tex
c_programming/12_internal_data_representation/: 12_internal_data_representation_slides.tex
c_programming_2_semester/: homeworks.md
hwproj_scripts/: grades_to_csv.py
(+18 files in other folders)
